--- a/deploy-nagios/templates/nagios-template.j2
+++ b/deploy-nagios/templates/nagios-template.j2
@@ -242,6 +242,11 @@
       "description": "The name and tag of the Nagios Docker image",
       "name": "NAGIOS_IMAGE",
       "value": "{{ nagios_image_version }}"
+    },
+    {
+      "description": "The url(s) of the server(s) for building iOS apps",
+      "name": "MAC_SERVERS",
+      "value": "{% for host in groups['macos'] %}{{ host }},{% endfor %}"
     }
   ]
 }
