--- a/deploy-nagios/templates/nagios-template.j2
+++ b/deploy-nagios/templates/nagios-template.j2
@@ -128,6 +128,10 @@
                   {
                     "name": "RHMAP_HOSTGROUPS",
                     "value": "${RHMAP_HOSTGROUPS}"
+                  },
+                  {
+                    "name": "MAC_SERVERS",
+                    "value": "${MAC_SERVERS}"
                   }
                 ],
                 "image": "${NAGIOS_IMAGE}",
